// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Space component "creating" mode should render correctly 1`] = `
"
<header-stub title=\\"Mock translation\\"
             has-back
>
  <icon-button-stub data-test=\\"add-button\\"
                    icon=\\"table\\"
  >
  </icon-button-stub>
</header-stub>
<div class=\\"m-4 flex flex-col flex-grow\\">
  <space-map-stub data-test=\\"space-map\\">
    <floor-plan-stub>
    </floor-plan-stub>
    <map-objects-stub clickable=\\"true\\">
    </map-objects-stub>
  </space-map-stub>
  <div class=\\"mt-auto ml-auto flex flex-row\\">
    <toggle-bar-stub start-icon=\\"table\\"
                     end-icon=\\"floor-plan\\"
    >
    </toggle-bar-stub>
  </div>
</div>
"
`;

exports[`Space component "editing" mode should render correctly 1`] = `
"
<header-stub title=\\"Mock translation\\"
             has-back
>
  <icon-button-stub data-test=\\"abort-button\\"
                    icon=\\"cross\\"
  >
  </icon-button-stub>
</header-stub>
<div class=\\"m-4 flex flex-col flex-grow\\">
  <space-map-stub data-test=\\"space-map\\">
    <floor-plan-stub>
    </floor-plan-stub>
    <map-objects-stub selected-map-object-id=\\"123\\"
                      clickable=\\"true\\"
    >
    </map-objects-stub>
  </space-map-stub>
  <div class=\\"mt-auto ml-auto flex flex-row\\">
    <floating-button-stub data-test=\\"delete-button\\"
                          type=\\"submit\\"
                          icon=\\"delete\\"
                          class=\\"mr-4\\"
    >
    </floating-button-stub>
  </div>
</div>
"
`;

exports[`Space component "viewing" mode should render correctly 1`] = `
"
<header-stub title=\\"Mock translation\\"
             has-back
>
  <icon-button-stub data-test=\\"add-button\\"
                    icon=\\"table\\"
  >
  </icon-button-stub>
</header-stub>
<div class=\\"m-4 flex flex-col flex-grow\\">
  <space-map-stub data-test=\\"space-map\\">
    <floor-plan-stub>
    </floor-plan-stub>
    <map-objects-stub clickable=\\"true\\">
    </map-objects-stub>
  </space-map-stub>
  <div class=\\"mt-auto ml-auto flex flex-row\\">
    <toggle-bar-stub start-icon=\\"table\\"
                     end-icon=\\"floor-plan\\"
    >
    </toggle-bar-stub>
  </div>
</div>
"
`;
